<resources>
    <string name="app_name">FamilyMapClient</string>
    <string name="server_host_label">Server Host</string>
    <string name="port_number_label">Port Number</string>
    <string name="user_name_label">User Name</string>
    <string name="password_label">Password</string>
    <string name="last_name_label">Last Name</string>
    <string name="first_name_label">First Name</string>
    <string name="email_label">Email</string>
    <string name="gender_label">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="login_failed_message">Login attempt failed! The username or password was not recognized.</string>
    <string name="login_success_message">Login successful!</string>
    <string name="register_failed_message">Registration attempt failed! Information was incomplete or user is already registered.</string>
    <string name="register_success_message">Registered new user!</string>
    <string name="welcome">Welcome!</string>
    <string name="lifeEvents">Life Events</string>
    <string name="family">Family</string>
    <string name="lifeStoryLines">Life Story Lines</string>
    <string name="lifeStoryLinesHint">SHOW LIFE STORY LINES</string>
    <string name="familyTreeLines">Family Tree Lines</string>
    <string name="familyTreeLinesHint">SHOW FAMILY TREE LINES</string>
    <string name="spouseLines">Spouse Lines</string>
    <string name="spouseLinesHint">SHOW SPOUSE LINES</string>
    <string name="fathersSide">Father\'s Side</string>
    <string name="fathersSideHint">FILTER BY FATHER\'S SIDE OF THE FAMILY</string>
    <string name="mothersSide">Mother\'s Side</string>
    <string name="mothersSideHint">FILTER BY MOTHER\'S SIDE OF THE FAMILY</string>
    <string name="maleEvents">Male Events</string>
    <string name="maleEventsHint">FILTER EVENTS BASED ON GENDER</string>
    <string name="femaleEvents">Female Events</string>
    <string name="femaleEventsHint">FILTER EVENTS BASED ON GENDER</string>
    <string name="logout">Logout</string>
    <string name="logoutHint">RETURN TO LOGIN SCREEN</string>
    <string name="mapPrompt">Click on a marker to see event details</string>
    <string name="searchPrompt">enter search here</string>
</resources>
